# tokensbyte

./: .dockerignore  .env  .env.example  .gitignore  CHANGELOG.md  DEPLOY-SCRIPT-GUIDE.md  EXPORT-IMAGES-GUIDE.md  LICENSE  OPEN_SOURCE_RELEASE_GUIDE.md  PLUGINS_SEPARATION.md  QUICK-EXPORT.md  README.md  UPDATE.md  agent.md  backup_pgsql.sh  backup_tokensapi_20260424_164148.sql  cleanup_duplicates.py  deploy.ps1  deploy.sh  deploy_seamless.sh  dev-os.sh  dev.ps1  dev.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  export-images.ps1  export-images.sh  fix_conflict.py  fix_conflicts.sh  fix_i32_in_api.py  fix_theme_import.py  high_availability_plugin_design.md  inject_rules.sh  local_restart.sh  modify_backend.py  modify_frontend.py  modify_layout.py  modify_pool_api.py  modify_service.py  (+28 more)
backend/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  build.rs  check_ids.js  db_fix.js  db_fix_group_aid.js  db_fix_quota.js  errors.txt  fix_ids.js  git_log.txt  output.txt  test_route.rs  test_rust.rs  tokensbyte.db  tokensbyte.db-shm  tokensbyte.db-wal
backend/data/: database.json  tokensbyte.db  tokensbyte.db-shm  tokensbyte.db-wal
backend/data_opensource/: .encryption_key
backend/data_opensource/portal/model/qwen3.6-35b/: index.html
backend/data_opensource/portal/models/: index.html
backend/examples/: hash_pass.rs
backend/src/: config.rs  error.rs  main.rs  money.rs
backend/src/api/: admin_groups.rs  admin_stats_sync.rs  announcements.rs  assets.rs  auth.rs  billing_rules.rs  channel_categories.rs  channel_configs.rs  channels.rs  dashboard.rs  date_helper.rs  default_docs.rs  docs_api.rs  finance.rs  forward_rules.rs  gptimage_pool.rs  happyhorse_router.rs  logs.rs  metrics.rs  mod.rs  model_classifications.rs  models.rs  pay.rs  playground.rs  plugins.rs  redemptions.rs  router_flow.rs  settings.rs  site_icons.rs  site_portal.rs  task_logs.rs  team_marketing.rs  tokens.rs  upstream_asset_relay.rs  upstreams.rs  user.rs  user_levels.rs  users.rs  volcengine_pool.rs
backend/src/api/default_docs/en/: ali-dashscope.md  anthropic-claude.md  auth-guide.md  balance-models.md  chat-completions.md  claude-chat.md  common-errors.md  endpoints.md  error-codes.md  google-gemini.md  google-image.md  gpt-image.md  images.md  kling-ai.md  kling-image.md  kling-video.md  site-api-overview.md  site-api-tokens-logs.md  site-api-user.md  text-to-speech.md  video.md  volc-image.md  volc-video.md  volcengine-api.md  volcengine-assets.md  volcengine-mediakit.md
backend/src/api/default_docs/ja/: ali-dashscope.md  anthropic-claude.md  auth-guide.md  balance-models.md  chat-completions.md  common-errors.md  endpoints.md  error-codes.md  google-gemini.md  images.md  kling-ai.md  site-api-overview.md  site-api-tokens-logs.md  site-api-user.md  text-to-speech.md  video.md  volcengine-api.md  volcengine-assets.md  volcengine-mediakit.md
backend/src/api/default_docs/ko/: ali-dashscope.md  anthropic-claude.md  auth-guide.md  balance-models.md  chat-completions.md  common-errors.md  endpoints.md  error-codes.md  google-gemini.md  images.md  kling-ai.md  site-api-overview.md  site-api-tokens-logs.md  site-api-user.md  text-to-speech.md  video.md  volcengine-api.md  volcengine-mediakit.md
backend/src/api/default_docs/vi/: ali-dashscope.md  anthropic-claude.md  auth-guide.md  balance-models.md  chat-completions.md  common-errors.md  endpoints.md  error-codes.md  google-gemini.md  images.md  kling-ai.md  site-api-overview.md  site-api-tokens-logs.md  site-api-user.md  text-to-speech.md  video.md  volcengine-api.md  volcengine-mediakit.md
backend/src/api/default_docs/zh/: claude-chat.md  common-errors.md  google-image.md  gpt-image.md  kling-image.md  kling-video.md  volc-image.md  volc-video.md  volcengine-assets.md  volcengine-mediakit.md
backend/src/auth/: mod.rs
backend/src/db/: convert_to_bigint.sql  migrations.rs  mod.rs
backend/src/db/migrations/: 003_redemptions.sql
backend/src/middleware/: live_metrics.rs  mod.rs  rate_limit.rs
backend/src/models/: admin_group.rs  announcement.rs  api_token.rs  channel.rs  channel_config.rs  channel_quota.rs  gptimage_pool.rs  log.rs  mod.rs  model.rs  order.rs  plugin.rs  redemption.rs  settings.rs  site_icon.rs  task_log.rs  upstream.rs  user.rs  user_level.rs  verification.rs  volcengine_pool.rs
backend/src/monitor/: health.rs
backend/src/providers/: anthropic.rs  google.rs  mod.rs  openai.rs  volcengine_billing.rs
backend/src/relay/: DEVELOPMENT_RULES.md  asset_convert.rs  audio.rs  balance.rs  billing_pipeline.rs  cascade.rs  channel_quota.rs  chat.rs  forward.rs  generic.rs  ha.rs  image.rs  mod.rs  model_list.rs  native.rs  proxy.rs  quota_memory.rs  response_formatter.rs  router.rs  stream.rs  task.rs  task_poller.rs  token_quota.rs  tos_persist.rs  url_utils.rs  usage_extractor.rs  usage_stats.rs  video.rs
backend/src/services/: affiliate.rs  email.rs  mod.rs  notification.rs  oauth.rs  sms.rs  tos.rs  upstream_asset_client.rs  volcengine.rs  volcengine_pool.rs
backend/src/services/payment/: alipay.rs  allinpay.rs  bonuspay.rs  hyperbc.rs  mod.rs  stripe.rs  wechat.rs
backend/src/src/api/: assets.rs  logs.rs  model_classifications.rs  pay.rs  plugins.rs  redemptions.rs  user_levels.rs
backend/src/src/auth/: mod.rs
backend/src/src/db/: migrations.rs
backend/src/src/db/migrations/: 005_admin_groups.sql
backend/src/src/middleware/: rate_limit.rs
backend/src/src/models/: model.rs  order.rs  settings.rs
backend/src/src/relay/: proxy.rs
backend/src/src/src/api/: forward_rules.rs  tokens.rs  users.rs
backend/src/src/src/db/: migrations.rs
backend/src/src/src/models/: plugin.rs  redemption.rs  task_log.rs
backend/src/src/src/monitor/: health.rs
backend/src/src/src/relay/: mod.rs
backend/src/src/src/src/: error.rs  main.rs
backend/src/src/src/src/api/: mod.rs  (+3 more)
backend/src/templates/portal/: about.html  base.html  contact.html  home.html  model_detail.html  models.html  portal.css
backend/src/time_system/: core.rs  db_ts.rs  mod.rs  package.rs  period.rs
(+261 files in other folders)
