[package]
name = "tokensbyte-server"
version = "0.1.0"
edition = "2021"
default-run = "tokensbyte-server"
description = "TokensByte - Next-gen LLM API Distribution & Management Platform"
[features]
default = ["plugin_site_icons", "plugin_site_portal"]
plugin_site_icons = []       # 站点图标管理插件
plugin_site_portal = []      # 站点门户插件

[dependencies]
# Web framework
axum = { version = "0.8", features = ["ws", "multipart", "macros"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip", "fs"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid", "json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }

# HTTP client (for upstream providers)
reqwest = { version = "0.12", features = ["json", "stream", "gzip", "multipart"] }
eventsource-stream = "0.2"

# Auth
jsonwebtoken = "9"
argon2 = "0.5"
bcrypt = "0.15"
rand = "0.8"

# Config
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# ULID (for log_id generation)
ulid = "1"

# Encryption (for API keys)
aes-gcm = "0.10"
base64 = "0.22"

# Utils
async-trait = "0.1"
thiserror = "2"
anyhow = "1"
bytes = "1"
pin-project-lite = "0.2"
regex = "1"
governor = "0.7"
dashmap = "6"
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "builder", "smtp-transport", "hostname"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
urlencoding = "2.1"
form_urlencoded = "1"
url = "2"
rsa = { version = "0.9", features = ["sha1", "sha2", "pem"] }
sha1 = { version = "0.10", default-features = false, features = ["oid"] }
md-5 = "0.10"

# Volcengine TOS Object Storage
ve-tos-rust-sdk = { version = "2.9", features = ["tokio-runtime"] }

# Template engine (portal static HTML generation)
tera = "1"
chrono-tz = "0.10.4"
iana-time-zone = "0.1.65"

[build-dependencies]
serde_json = "1"

# 本地开发：减小调试信息 + 增量，缩短链接等待（不影响 release）
[profile.dev]
debug = "line-tables-only"
incremental = true

[profile.release]
# opt-level=1 配合 codegen-units=1 极大幅度减少 LLVM 优化器的内存占用，防 OOM
opt-level = 1
codegen-units = 1
panic = 'abort'
strip = true
lto = false
debug = false
